# meal-planner

./: .env.example  .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml
src/: main.py
src/template_package/: template_module.py
tests/template_package/: test_template_module.py
