[project]
name = "meal-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "j.vargas.g.d@gmail.com" }]
license = { file = "LICENSE" }
dependencies = [
    "dotenv>=0.9.9",
    "notion-client>=2.5.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
]

[tool.ruff]
# Set the maximum allowed line length for the linter and formatter.
line-length = 120

# You can add directories/files to exclude from both linting and formatting.
exclude = [ ".eggs", "**/*.egg", ".git", ".mypy_cache", ".venv", "__pycache__", ".task"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes (general bugs/errors)
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common design issues/bugs)
    "UP",  # pyupgrade (modernizing syntax)
]

[tool.mypy]
strict = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
